syntax = "proto3";

package bytebase.v1;

import "google/api/annotations.proto";
import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/field_mask.proto";
import "v1/logging_service.proto";

option go_package = "generated-go/v1";

service InboxService {
  rpc ListInbox(ListInboxRequest) returns (ListInboxResponse) {
    option (google.api.http) = {get: "/v1/inbox"};
  }

  rpc GetInboxSummary(GetInboxSummaryRequest) returns (InboxSummary) {
    option (google.api.http) = {get: "/v1/inbox:summary"};
  }

  rpc UpdateInbox(UpdateInboxRequest) returns (InboxMessage) {
    option (google.api.http) = {
      patch: "/v1/{inbox_message.name=inbox/*}"
      body: "inbox_message"
    };
    option (google.api.method_signature) = "inbox_message,update_mask";
  }
}

message ListInboxRequest {
  // filter is the filter to apply on the list inbox request,
  // follow the [ebnf](https://en.wikipedia.org/wiki/Extended_Backus%E2%80%93Naur_form) syntax.
  // The field only support in filter:
  // - "create_time" with ">=" operator, example:
  //    - create_time >= "2022-01-01T12:00:00.000Z"
  string filter = 1;

  // Not used. The maximum number of inbox to return.
  // The service may return fewer than this value.
  // If unspecified, at most 100 log entries will be returned.
  // The maximum value is 1000; values above 1000 will be coerced to 1000.
  int32 page_size = 2;

  // Not used. A page token, received from a previous `ListInbox` call.
  // Provide this to retrieve the subsequent page.
  string page_token = 3;
}

message ListInboxResponse {
  // The list of inbox messages.
  repeated InboxMessage inbox_messages = 1 [(google.api.field_behavior) = OUTPUT_ONLY];

  // A token to retrieve next page of inbox.
  // Pass this value in the page_token field in the subsequent call to `ListLogs` method
  // to retrieve the next page of log entities.
  string next_page_token = 2;
}

message GetInboxSummaryRequest {}

message UpdateInboxRequest {
  // The inbox message to update.
  InboxMessage inbox_message = 1 [(google.api.field_behavior) = REQUIRED];

  // The list of fields to update.
  google.protobuf.FieldMask update_mask = 2;
}

message InboxMessage {
  // The message name in inbox/{uid} format.
  string name = 1;

  string activity_uid = 2;

  enum Status {
    STATUS_UNSPECIFIED = 0;
    STATUS_UNREAD = 1;
    STATUS_READ = 2;
  }
  Status status = 3;

  LogEntity activity = 4;
}

message InboxSummary {
  int32 unread = 1;

  int32 unread_error = 2;
}
